coukchef-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cookchef-service
spec:
  selector:
    app: nginx-cookchef
  ports:
    -  protocol: TCP
       port: 80
       targetPort: 80
