medium-service-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: medium-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: nginx-medium
  ports:
    -  name: http
       protocol: TCP
       port: 80
       targetPort: 80
